@@ -5,14 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.aphreet.c3</groupId>
     <artifactId>c3webclient</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>C3 Web Client</name>
     <inceptionYear>2010</inceptionYear>
     <properties>
-        <scala.version>2.9.1</scala.version>
-        <lift.version>2.4</lift.version>
-        <akka.version>2.0</akka.version>
+        <scala.version>2.10</scala.version>
+        <scala.version.full>${scala.version}.1</scala.version.full>
+        <lift.version>2.5.1</lift.version>
+        <akka.version>2.1.2</akka.version>
         <!-- Common plugin settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
@@ -41,12 +42,12 @@
         <repository>
             <id>libs-release</id>
             <name>iFunSoftware release repository</name>
-            <url>http://repository-ifunsoftware.rhcloud.com/content/repositories/releases</url>
+            <url>http://repository.ifunsoftware.com/content/repositories/releases</url>
         </repository>
         <repository>
             <id>libs-snapshot</id>
             <name>iFunSoftware snapshot repository</name>
-            <url>http://repository-ifunsoftware.rhcloud.com/content/repositories/snapshots/</url>
+            <url>http://repository.ifunsoftware.com/content/repositories/snapshots/</url>
         </repository>
         <repository>
             <id>c3</id>
@@ -63,12 +64,12 @@
         <repository>
             <id>ifunsoftware</id>
             <name>iFunSoftware release repository</name>
-            <url>http://repository-ifunsoftware.rhcloud.com/content/repositories/releases</url>
+            <url>http://repository.ifunsoftware.com/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
             <id>ifunsoftware-snap</id>
             <name>iFunSoftware snapshot repository</name>
-            <url>http://repository-ifunsoftware.rhcloud.com/content/repositories/snapshots/</url>
+            <url>http://repository.ifunsoftware.com/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
     <pluginRepositories>
@@ -92,7 +93,13 @@
         <dependency>
             <groupId>com.ifunsoftware.c3</groupId>
             <artifactId>accesslib</artifactId>
-            <version>1.0.11</version>
+            <version>1.0.24</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-codec</groupId>
+                    <artifactId>commons-codec</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>net.liftweb</groupId>
@@ -100,14 +107,14 @@
             <version>${lift.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.liftweb</groupId>
-            <artifactId>lift-textile_${scala.version}</artifactId>
-            <version>${lift.version}</version>
+            <groupId>net.liftmodules</groupId>
+            <artifactId>textile_2.5_${scala.version}</artifactId>
+            <version>1.3</version>
         </dependency>
         <dependency>
-            <groupId>net.liftweb</groupId>
-            <artifactId>lift-widgets_${scala.version}</artifactId>
-            <version>${lift.version}</version>
+            <groupId>net.liftmodules</groupId>
+            <artifactId>widgets_2.5_${scala.version}</artifactId>
+            <version>1.3</version>
         </dependency>
         <dependency>
             <groupId>be.devijver</groupId>
@@ -125,7 +132,7 @@
             <version>0.9.26</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
@@ -160,18 +167,18 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.9.1</artifactId>
+            <artifactId>scalatest_${scala.version}</artifactId>
             <version>1.9.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor</artifactId>
+            <artifactId>akka-actor_${scala.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-testkit</artifactId>
+            <artifactId>akka-testkit_${scala.version}</artifactId>
             <version>${akka.version}</version>
             <scope>test</scope>
         </dependency>
@@ -192,7 +199,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
-            <version>${scala.version}</version>
+            <version>${scala.version.full}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -203,6 +210,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
                 <configuration>
                     <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                     <warSourceDirectory>src/main/webapp</warSourceDirectory>
@@ -225,16 +233,22 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <scalaVersion>${scala.version}</scalaVersion>
+                    <args>
+                        <arg>-deprecation</arg>
+                        <arg>-feature</arg>
+                    </args>
+                    <scalaVersion>${scala.version.full}</scalaVersion>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.25</version>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>8.1.10.v20130312</version>
                 <configuration>
-                    <reload>manual</reload>
-                    <contextPath>/</contextPath>
+                    <jvmArgs>-XX:PermSize=256M -XX:MaxPermSize=512M -Xms256M -Xmx800M -Dlogback.configurationFile=${basedir}/src/main/config/logback.xml</jvmArgs>
+                    <webApp>
+                        <contextPath>/</contextPath>
+                    </webApp>
                 </configuration>
             </plugin>
             <plugin>
